--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@ title: Contact
 heading: Get in touch today
 subtitle: We'd love to help your business.
 map:
-  latitude: -45.8787605
-  longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
+  latitude: 50.042400
+  longitude: 9.040972
+  address: "Hörsteinerstr. 20a, 63791 Karlstein a. Main, Germany"
   zoom: 13
 ---
 
