--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Urban
 
 <section class="hero diagonal">
 	<div class="container">
-		<h2 class="editable">We boost your Airbnb revenues</h2>
-		<p class="subtext editable">We answer your questions with live data from Airbnb</p>
+		<h2 class="editable">Boost your Airbnb income</h2>
+		<p class="subtext editable">We have the data to help you</p>
 		<p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p>
 	</div>
 </section>
