--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Urban
 
 <section class="hero diagonal">
 	<div class="container">
-		<h2 class="editable">Boost your Airbnb income</h2>
+		<h2 class="editable">Boost your Airbnb income in 7 days</h2>
 		<p class="subtext editable">We have the data to help you getting insights that make the difference</p>
 		<p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p>
 	</div>
