--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Urban
 	<div class="container">
 		<h2 class="editable">Boost your Airbnb income in 7 days</h2>
 		<p class="subtext editable">We have the data to help you getting insights that make the difference</p>
-		<p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p>
+		<p><a class="button alt" href="{{ site.baseurl }}/products/">Start now...</a></p>
 	</div>
 </section>
 <!--
