--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: Contact
 heading: Get in touch today
-subtitle: We'd love to help your business.
+subtitle: We'd love to help you.
 map:
   latitude: 50.042400
   longitude: 9.040972
