--- a/products.html
+++ b/products.html
@@ -1,20 +1,20 @@
 ---
 title: Products
-heading: Our Work
-subtitle: See some of our proud customers with exemplary results.
+heading: Our Products
+subtitle: Start increasing your income with insights from our data.
 ---
 
 <section class="diagonal patterned">
 	<div class="container">
-	    <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_clients/" class="btn"><strong>&#9998;</strong> Manage Clients</a></p>
+	    <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products/" class="btn"><strong>&#9998;</strong> Manage products</a></p>
 		<ul class="image-grid">
-			{% for client in site.clients %}
+			{% for product in site.products %}
 				<li>
-					<a href="{{ site.baseurl }}{{ client.url }}">
-						<img src="{% include relative-src.html src=client.image_path %}" alt="{{ person.name }}">
+					<a href="{{ site.baseurl }}{{ product.url }}">
+						<img src="{% include relative-src.html src=product.image_path %}" alt="{{ person.name }}">
 						<div class="details">
-							<div class="name">{{ client.name }}</div>
-							<div class="position">{{ client.subtitle }}</div>
+							<div class="name">{{ product.name }}</div>
+							<div class="position">{{ product.subtitle }}</div>
 						</div>
 					</a>
 				</li>
