--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 ---
-title: bnbdata.co - We have the data to help you getting insights to increase your airbnb income.
+title: bnbdata.co - We help you getting the insights into your local market by providing you the data you need.
 ---
 
 <section class="hero diagonal">
 	<div class="container">
-		<h2 class="editable">Boost your Airbnb income now.</h2>
-		<p class="subtext editable">We have the data to help you getting insights that make the difference.</p>
-		<p><a class="button alt" href="{{ site.baseurl }}/products/">Start now...</a></p>
+		<h2 class="editable">Boost your Airbnb business today.</h2>
+		<p class="subtext editable">We help you getting the insights into your local market by providing you the data you need.</p>
+		<!--<p><a class="button alt" href="{{ site.baseurl }}/products/">Start now...</a></p>-->
 	</div>
 </section>
 
+<!--
 <section class="diagonal patterned">
 	<div class="container halves">
 		<div>
@@ -26,7 +27,7 @@ title: bnbdata.co - We have the data to help you getting insights to increase yo
 		</div>
 	</div>
 </section>
-<!--
+
 
 <section class="diagonal alternate">
 	<div class="container halves">
