--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 title: bnbdata.co - We help you getting the insights into your local market by providing you the data you need.
 ---
 
-
 <section class="hero diagonal">
 	<div class="container">
 		<h2 class="editable">Boost your Airbnb business today.</h2>
-		<p class="subtext editable">We help you getting the insights into your local market by providing you the data you need.</p>
+		<p class="subtext editable">We help you getting the insights into your local market by providing you the data you
+			need.</p>
 		<!--<p><a class="button alt" href="{{ site.baseurl }}/products/">Start now...</a></p>-->
 	</div>
 </section>
