added products, ganalytics code

--- a/_products/occupancy-rate-calendar.html
+++ b/_products/occupancy-rate-calendar.html
@@ -1,5 +1,53 @@
 ---
-title: "Occupancy and Rate Calendar"
+title: "Increase Your Revenue With Insights About Your Local Market on Airbnb"
+subtitle: "Exploit Extra Opportunities for Revenue With Our Occupancy and Rate Calendar for Your Area"
 ---
+<section id="benefit-overview">
+    <img id="hero-shot" alt="Occupancy and Rate Calendar" src="/assets/img/calendar_full.png">
 
-<h1>Occupancy and Rate Calendar</h1>
+    <p>Our clear Calendars provide you the insights about the occupancy and rate you need to succeed</p>
+    <ul>
+        <li>Save Your Time For Collecting the numbers from Hundreds of Listings</li>
+        <li>Spot days with higher demand immediately</li>
+        <li>Never miss competitors price increases</li>
+    </ul>
+    <form class="cta-form" target="_blank"
+        action="https://www.fiverr.com/jens_laufer/provide-occupancy-and-rate-data-for-your-area-on-airbnb">
+        <button type="submit">Fetch Your Calendars...</button>
+        <p>Get Occupancy and Rate calendar + Spreadsheet with data</p>
+    </form>
+</section>
+
+<section id="benefit-container">
+    <div>
+        <img src="/assets/img/benefit_icon_1.png">
+        <h3>Save yourself valuable Time for collection numbers</h3>
+        <p>Data from hundreds of listings are collected and processed by me which would take you days.
+            Instead,
+            spend
+            your time on what you good are.</p>
+    </div>
+    <div>
+        <img src="/assets/img/benefit_icon_1.png">
+        <h3>Increase Your Income by spotting days with high demand</h3>
+        <p>The Overall Occupancy Calendar visualises days with higher demand. You know when to change your
+            prices
+            for
+            extra revenue.</p>
+    </div>
+    <div>
+        <img src="/assets/img/benefit_icon_1.png">
+        <h3>Never miss out hidden opportunities for extra revenue</h3>
+        <p>The Overall Rate Calendar visualises when your competitors are increasing their prices.
+            Unveil
+            events
+            you
+            don't know about with the crowd knowledge of your competitors.</p>
+    </div>
+</section>
+
+<form class="cta-form" target="_blank"
+    action="https://www.fiverr.com/jens_laufer/provide-occupancy-and-rate-data-for-your-area-on-airbnb">
+    <button type="submit">Fetch Your Calendars...</button>
+    <p>Get Occupancy and Rate calendar + Spreadsheet with data</p>
+</form>
