--- a/_products/occupancy-rate-calendar.html
+++ b/_products/occupancy-rate-calendar.html
@@ -1,6 +1,7 @@
 ---
 title: "Increase Your Revenue With Insights About Your Local Market on Airbnb"
 subtitle: "Exploit Extra Opportunities for Revenue With Our Occupancy and Rate Calendar for Your Area"
+tile: https://res.cloudinary.com/jenslaufer/image/upload/c_scale,w_350/v1555069821/Kopie_von_br_eakfast_l_unch_ww.brunch.com.png
 ---
 <section id="benefit-overview">
     <img id="hero-shot" alt="Occupancy and Rate Calendar" src="/assets/img/calendar_full.png">
